# internal/dto/healthcheck.go
@@ -1,0 +1,7 @@
+package dto
+
+type HealthCheckResponse struct {
+	Version     string `json:"version"`
+	AppName     string `json:"app_name"`
+	CurrentTime int64  `json:"current_time"`
+}
